# unmake

./: .codespellrc  .dockerignore  .editorconfig  .gitignore  .pre-commit-hooks.yaml  .rubberstamp  .shellcheckrc  .tool-versions  Cargo.toml  Cross.toml  DEVELOPMENT.md  Dockerfile  INSTALL.md  LICENSE.md  PARSING.md  README.md  SYNTAX.md  WARNINGS.md  crit.toml  docker-bake.hcl  go.mod  go.sum  install  install-unmake  install.mk  makefile  port  rockhopper.toml  tinyrick.rs  tuggy.toml  uninstall-unmake  upload
.cargo/: cargo.toml
.github/workflows/: actionlint.yml  audit.yml  lint.yml  rubberstamp.yml  test-futureproof-dependencies.yml  test-futureproof-language.yml  test-futureproof-os.yml  test.yml
examples/: GNUmakefile  Makefile
examples/bsd/: makefile
examples/cmake/: CMakeLists.txt
examples/crlf/: makefile
examples/grocer/: fruit.mk  makefile
examples/provisioning/: .tool-versions  makefile
examples/ub-empty-rule/: makefile
fixtures/: .editorconfig
fixtures/invalid/: crlf.mk  default-with-prerequisites.mk  degenerate-macro-definitions.mk  empty-rule.mk  ignore-with-commands.mk  indented-general-expression.mk  indented-rule-target.mk  multiline-comments.mk  multiline-macro.mk  multiline-targets.mk  multiline-with-trailing-whitespace.mk  non-wait-special-as-prerequisite.mk  notparallel-with-prerequisites.mk  silent-with-commands.mk  soft-tabbed-rule.mk  suffixes-with-commands.mk  ub-operator.mk  unindented-rule.mk  unterminated-multiline-command.mk  wait-with-commands.mk
fixtures/parse-invalid/: conditional.GNUmakefile  indented-include-line.mk  indented-macro-definition.mk  multiline-include.mk  notparallel-with-commands.mk  phony-with-commands.mk  posix-with-indented-commands.mk  posix-with-prerequisites.mk  precious-with-commands.mk  reset-posix.mk  rule-missing-colon.mk  sccs-get-with-prerequisites.mk  unescaped-multiline-expressions.mk  unterminated-multiline-command.mk  utf-16le.mk  wait-with-prerequisites.mk
fixtures/parse-valid/: BSDmakefile  ambiguous-include.mk  appending-assignment.mk  backslash-command-prefix.mk  backslash-macro-value.mk  blank-command.mk  boilerplate-ats.mk  boilerplate-minuses.mk  command-comments.mk  comments.mk  curdir-assignment.mk  delay.mk  directory-and-filename-macros.mk  double-quote-targets.mk  (+60 more)
src/: ast.rs  inspect.rs  lib.rs  unmake.rs  warnings.rs
(+24 files in other folders)
