[package]
name = "unmake"
description = "a makefile linter"
version = "0.0.27"
edition = "2024"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "0BSD"
repository = "https://github.com/mcandre/unmake"
documentation = "https://docs.rs/unmake/latest/unmake/"
exclude = [
     "*.mk",
     ".crit",
     ".editorconfig",
     ".github",
     ".rockhopper",
     ".rubberstamp",
     ".tool-versions",
     "Cross.toml",
     "crit.toml",
     "fixtures",
     "go.mod",
     "go.sum",
     "makefile",
     "rockhopper.toml",
     "upload",
     "vendor",
]

[dependencies]
die = "0.2.0"
getopts = "0.2.24"
peg = "0.8.5"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"

[lib]
name = "unmake"

[[bin]]
name = "unmake"
path = "src/bin/unmake.rs"

[profile.release]
strip = "symbols"
